Login activity created and done some minor changes

--- a/getWorkDone2/app/src/main/res/values/strings.xml
+++ b/getWorkDone2/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">getWorkDone</string>
+    <string name="refresh">Refresh</string>
+    <string name="about">About</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
 </resources>
