--- a/getWorkDone2/app/src/main/res/values/strings.xml
+++ b/getWorkDone2/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="about">About</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="Home">Home</string>
+    <string name="Settings">Settings</string>
+    <string name="Notifications">Notifications</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
