--- a/getWorkDone2/app/src/main/res/values/strings.xml
+++ b/getWorkDone2/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Home">Home</string>
     <string name="Settings">Settings</string>
     <string name="Notifications">Notifications</string>
+    <string name="upload">Upload</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
